# budget

./: .cursorrules  .gitignore  Caddyfile  DEPLOY.md  Dockerfile.fly  LICENSE  README.md  docker-compose.hetzner.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  deno.json  drizzle.config.ts
backend/src/: main.ts
backend/src/db/: index.ts  schema.ts
backend/src/lib/: stock-cache.ts
backend/src/middleware/: auth.ts
backend/src/routes/: assets.ts  auth.ts  categories.ts  dashboard.ts  expenses.ts  export.ts  import.ts  incomes.ts  loans.ts  savings.ts  stocks.ts
backend/src/tests/: export.test.ts
backups/: .gitkeep
deploy/: HETZNER.md  hetzner-setup.sh  manage.sh
frontend/: Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/src/hooks/: useDebounce.ts
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/pages/: Assets.tsx  Dashboard.tsx  Import.tsx  Login.tsx  Monthly.tsx  Register.tsx  Settings.tsx
python-service/: Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini  requirements.txt
python-service/app/: __init__.py  main.py  schemas.py
python-service/app/extractors/: __init__.py  generic_csv.py  handelsbanken.py  norwegian_banks.py
python-service/tests/: __init__.py  conftest.py  test_extractors.py
scripts/: create-user.sh  init.sql  run-migrations.sh  seed-dev.sql  seed.sql  setup-hetzner.sh  setup-selfhost.sh  validate.sh
scripts/migrations/: 001_add_sort_index_to_staged_expenses.sql  002_add_savings_table.sql  003_snapshot_year_week.sql
